force-app/main/default/objects/Product_Allocation__c/Product_Allocation__c.object-meta.xml
<CustomObject>
    <label>Product Allocation</label>
    <nameField>
        <label>Product Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>