force-app/main/default/objects/Product_Allocation__c/fields/Availability_is_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Availability_is_Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability is Blacklist</label>
    <type>Checkbox</type>
</CustomField>