force-app/main/default/objects/Product_Allocation__c/fields/Available_In_Stores__c.field-meta.xml
<CustomField>
    <fullName>Available_In_Stores__c</fullName>
    <label>Available In Stores</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>