force-app/main/default/objects/Product_Allocation__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>