force-app/main/default/objects/Product_Allocation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Product Allocations</relationshipLabel>
    <relationshipName>Product_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>