force-app/main/default/objects/Product_Allocation__c/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <formula>HYPERLINK(Product__r.ReportingCategory__c, Product__r.ReportingCategory__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Category</label>
    <type>Text</type>
</CustomField>