force-app/main/default/objects/Product_Allocation__c/fields/Reserved_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Quantity__c</fullName>
    <label>Reserved Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>