force-app/main/default/objects/Product_Allocation__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MANAGEMENT_ZONE_LEVEL</valueSetName>
    </valueSet>
</CustomField>