force-app/main/default/objects/Product_Allocation__c/fields/Zone_Product_Combo__c.field-meta.xml
<CustomField>
    <fullName>Zone_Product_Combo__c</fullName>
    <label>Zone/Product Combo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>