force-app/main/default/objects/Product_Allocation__c/listViews/All_allocations.listView-meta.xml
<ListView>
    <fullName>All_allocations</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Zone__c</columns>
    <columns>Available_In_Stores__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>Reserved_Quantity__c</columns>
    <columns>IsActive__c</columns>
    <columns>Category__c</columns>
    <columns>Reporting_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All allocations</label>
</ListView>